# claude-usage-monitor

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-06-07-live-activity.md  2026-06-08-frozen-refresh.md
docs/superpowers/specs/: 2026-06-07-live-activity-design.md  2026-06-08-frozen-refresh-design.md
src/: format.test.ts  format.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity.rs  config.rs  icon.rs  lib.rs  main.rs  quota.rs  statusline.rs  usage.rs
