[package]
name = "claude-usage-monitor"
version = "0.1.0"
description = "Pinnable desktop monitor for Claude usage & quota"
authors = ["Rafael"]
edition = "2021"

[lib]
name = "claude_usage_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
dirs = "5"
tokio = { version = "1", features = ["time"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
